--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -1,19 +1,37 @@
 <!doctype html>
 <html>
-  <head>
-    <meta charset="utf-8">
+	<head>
+		<meta charset="utf-8">
+		<meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
+		<title><%= current_page.data.title || "Wikimedia Foundation: Transparency Report" %></title>
 
-    <!-- Always force latest IE rendering engine or request Chrome Frame -->
-    <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
+		<%= stylesheet_link_tag "bootstrap.min.css" %>
+		<%= javascript_include_tag  "all" %>
+	</head>
 
-    <!-- Use title if it's in the page YAML frontmatter -->
-    <title><%= current_page.data.title || "Wikimedia Foundation: Transparency Report" %></title>
-
-    <%= stylesheet_link_tag "bootstrap.min.css" %>
-    <%= javascript_include_tag  "all" %>
-  </head>
-
-  <body class="<%= page_classes %>">
-    <%= yield %>
-  </body>
+	<body class="<%= page_classes %>">
+		<div class="container">
+			<header>
+				<nav class="navbar navbar-default" role="navigation">
+					<div class="navbar-header">
+						<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+							<span class="sr-only">Toggle navigation</span>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+						</button>
+						<a class="navbar-brand" href="#">Wikimedia Transparency Report</a>
+					</div>
+					<div class="collapse navbar-collapse">
+						<ul class="nav navbar-nav navbar-right">
+							<li><a href="/privacy">Privacy</a></li>
+							<li><a href="/content">Content</a></li>
+							<li><a href="/faq">FAQ</a></li>
+						</ul>
+					</div>
+				</nav>
+			</header>
+			<%= yield %>
+		</div>
+	</body>
 </html>
