Add homepage mock
Change-Id: I8c4a3ab830821442d1998c5d2bda9d0c85e07eb4

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,1 +1,38 @@
-<h1>Home</h1>
+<div class="jumbotron">
+	<h1>Wikimedia<br>Transparency<br>Report</h1>
+</div>
+
+<div class="col-md-12">
+	<p class="lead">
+		Sed dapibus diam quam. Phasellus lacus metus, venenatis eu ligula volutpat, venenatis faucibus ante. Donec rutrum mauris eu venenatis posuere. Quisque in accumsan velit. Maecenas placerat augue dolor. Nunc dignissim nibh quis adipiscing semper. Cras non sodales neque. Vivamus vitae viverra justo, vel volutpat felis. Duis pulvinar dolor et magna consequat faucibus. Morbi euismod suscipit iaculis. Vivamus pharetra tempus condimentum. Sed non mauris tellus. Integer bibendum augue ut mi scelerisque porta. Suspendisse egestas pulvinar mattis. Fusce adipiscing tristique est. Curabitur pharetra lectus mauris, ac aliquet purus aliquet in
+	</p>
+</div>
+
+<div class="col-md-4">
+	<h3><small>Story</small><br>Hallogallo</h3>
+	<small>July 2013</small>
+	<hr/>
+	<p>
+		Maecenas vitae nibh leo. Vivamus laoreet a purus vulputate ultricies. Suspendisse est sem, congue in leo eget, feugiat tincidunt felis. Maecenas congue fringilla nulla id aliquet. Sed eu erat quis orci blandit auctor ac sed arcu. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec est mauris, consequat sit amet convallis eget, varius vitae quam. Nullam venenatis, risus a dignissim placerat, tortor justo cursus lectus, sed facilisis est massa sed quam. Nam pretium, eros ac laoreet pretium, nisl felis tincidunt ligula, sit amet aliquet erat enim adipiscing dolor. Curabitur a purus nec libero vehicula dignissim in eu elit.
+	</p>
+</div>
+
+<div class="col-md-4">
+	<h3><small>Story</small><br>Sonderangebot</h3>
+	<small>July 2013</small>
+	<hr/>
+	<p>
+		Maecenas vitae nibh leo. Vivamus laoreet a purus vulputate ultricies. Suspendisse est sem, congue in leo eget, feugiat tincidunt felis. Maecenas congue fringilla nulla id aliquet. Sed eu erat quis orci blandit auctor ac sed arcu. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec est mauris, consequat sit amet convallis eget, varius vitae quam. Nullam venenatis, risus a dignissim placerat, tortor justo cursus lectus, sed facilisis est massa sed quam. Nam pretium, eros ac laoreet pretium, nisl felis tincidunt ligula, sit amet aliquet erat enim adipiscing dolor. Curabitur a purus nec libero vehicula dignissim in eu elit.
+	</p>
+</div>
+
+<div class="col-md-4">
+	<h3><small>Story</small><br>Weissensee</h3>
+	<small>July 2013</small>
+	<hr/>
+	<p>
+		Maecenas vitae nibh leo. Vivamus laoreet a purus vulputate ultricies. Suspendisse est sem, congue in leo eget, feugiat tincidunt felis. Maecenas congue fringilla nulla id aliquet. Sed eu erat quis orci blandit auctor ac sed arcu. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec est mauris, consequat sit amet convallis eget, varius vitae quam. Nullam venenatis, risus a dignissim placerat, tortor justo cursus lectus, sed facilisis est massa sed quam. Nam pretium, eros ac laoreet pretium, nisl felis tincidunt ligula, sit amet aliquet erat enim adipiscing dolor. Curabitur a purus nec libero vehicula dignissim in eu elit.
+	</p>
+</div>
+
+<div class="clear">&nbsp;</div>
