--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -31,7 +31,40 @@
 					</div>
 				</nav>
 			</header>
+
 			<%= yield %>
+
+			<footer>
+				<hr>
+				<div class="col-md-5"><a href="/">Wikimedia Transparency Report</a></div>
+
+				<div class="col-md-2">
+					<ul>
+						<li><a href="#">Privacy</a></li>
+						<li><a href="#">Content</a></li>
+						<li><a href="#">FAQ</a></li>
+					</ul>
+				</div>
+
+				<div class="col-md-2">
+					<ul>
+						<li><a href="#">Privacy Policy</a></li>
+						<li><a href="#">Data Retention</a></li>
+						<li><a href="#">Terms</a></li>
+						<li><a href="#">Glossary</a></li>
+					</ul>
+				</div>
+
+				<div class="col-md-2">
+					<ul>
+						<li><a href="#">About Us</a></li>
+						<li><a href="#">Blog</a></li>
+						<li><a href="#">Contact Us</a></li>
+					</ul>
+				</div>
+
+			</footer>
+
 		</div>
 	</body>
 </html>
