Add privacy page
Change-Id: I447abc033e41e5155a8838c91beef2fbbdb4846f

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -6,6 +6,7 @@
 		<title><%= current_page.data.title || "Wikimedia Foundation: Transparency Report" %></title>
 
 		<%= stylesheet_link_tag "bootstrap.min.css" %>
+		<%= stylesheet_link_tag "master.css" %>
 		<%= javascript_include_tag  "all" %>
 	</head>
 
