--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -21,11 +21,11 @@
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 						</button>
-						<a class="navbar-brand" href="#">Wikimedia Transparency Report</a>
+						<a class="navbar-brand" href="/">Wikimedia Transparency Report</a>
 					</div>
 					<div class="collapse navbar-collapse">
 						<ul class="nav navbar-nav navbar-right">
-							<li><a href="/privacy">Privacy</a></li>
+							<li><a href="/privacy">User Data</a></li>
 							<li><a href="/content">Content</a></li>
 							<li><a href="/faq">FAQ</a></li>
 						</ul>
@@ -41,7 +41,7 @@
 
 				<div class="col-md-2">
 					<ul>
-						<li><a href="#">Privacy</a></li>
+						<li><a href="#">User Data</a></li>
 						<li><a href="#">Content</a></li>
 						<li><a href="#">FAQ</a></li>
 					</ul>
@@ -52,7 +52,6 @@
 						<li><a href="#">Privacy Policy</a></li>
 						<li><a href="#">Data Retention</a></li>
 						<li><a href="#">Terms</a></li>
-						<li><a href="#">Glossary</a></li>
 					</ul>
 				</div>
 
@@ -60,7 +59,6 @@
 					<ul>
 						<li><a href="#">About Us</a></li>
 						<li><a href="#">Blog</a></li>
-						<li><a href="#">Contact Us</a></li>
 					</ul>
 				</div>
 
