--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -21,7 +21,10 @@
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 						</button>
-						<a class="navbar-brand" href="/">Wikimedia Transparency Report</a>
+						<a class="navbar-brand" href="/">
+							<img src="/images/logo.png" />
+							Wikimedia Transparency Report
+						</a>
 					</div>
 					<div class="collapse navbar-collapse">
 						<ul class="nav navbar-nav navbar-right">
@@ -36,8 +39,12 @@
 			<%= yield %>
 
 			<footer>
-				<hr>
-				<div class="col-md-5"><a href="/">Wikimedia Transparency Report</a></div>
+				<div class="col-md-5">
+					<a href="/">
+						<img src="/images/logo.png">
+						Wikimedia Transparency Report
+					</a>
+				</div>
 
 				<div class="col-md-2">
 					<ul>
