--- a/source/privacy.html.erb
+++ b/source/privacy.html.erb
@@ -1,12 +1,17 @@
 <div class="jumbotron">
 	<h1>
 		<small>Privacy</small><br>
-		User Information<br>
-		Requests
+		<span class="blue">
+			User Information<br>
+			Requests
+		</span>
 	</h1>
 </div>
 
-<div class="col-md-8">
+<div class="col-md-9">
+	<p class="lead">
+		Sed dapibus diam quam. Phasellus lacus metusvenenatis eu ligula volutpat, venenatis faucibus ante.
+	</p>
 	<h2>Quisque in accumsan</h2>
 	<p>
 		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc massa enim, pharetra a euismod in, aliquam id nisl. Vivamus elementum ullamcorper odio, sed laoreet risus lacinia sit amet. Sed eget pharetra eros. Nunc id luctus odio, et cursus justo. Vestibulum eu imperdiet arcu. Integer semper libero a commodo posuere. Vestibulum ut elit purus. Sed vestibulum arcu risus, ut aliquet justo aliquam eget. Nam eget enim vehicula, lacinia augue in, luctus massa. Maecenas id nunc orci. Proin molestie libero erat, eget consectetur nisi mollis vel. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Fusce pellentesque metus quis pellentesque gravida. Aliquam scelerisque augue sed lacus sodales, in vestibulum tortor dictum. Mauris ut mi orci.
@@ -27,9 +32,9 @@
 
 </div>
 
-<div class="col-md-4">
-	<br><br><br>
-	<div class="well">
+<div class="col-md-3">
+	<br><br><br><br><br>
+	<div class="story">
 		<h3><small>Story</small><br>Hallogallo</h3>
 		<small>July 2013</small>
 		<hr/>
