--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,5 +1,11 @@
 <div class="jumbotron">
-	<h1>Wikimedia<br>Transparency<br>Report</h1>
+	<h1>
+		Wikimedia
+		<span class="blue">
+			<br>Transparency
+			<br>Report
+		</span>
+	</h1>
 </div>
 
 <div class="col-md-12">
@@ -9,30 +15,36 @@
 </div>
 
 <div class="col-md-4">
-	<h3><small>Story</small><br>Hallogallo</h3>
-	<small>July 2013</small>
-	<hr/>
-	<p>
-		Maecenas vitae nibh leo. Vivamus laoreet a purus vulputate ultricies. Suspendisse est sem, congue in leo eget, feugiat tincidunt felis. Maecenas congue fringilla nulla id aliquet. Sed eu erat quis orci blandit auctor ac sed arcu. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec est mauris, consequat sit amet convallis eget, varius vitae quam. Nullam venenatis, risus a dignissim placerat, tortor justo cursus lectus, sed facilisis est massa sed quam. Nam pretium, eros ac laoreet pretium, nisl felis tincidunt ligula, sit amet aliquet erat enim adipiscing dolor. Curabitur a purus nec libero vehicula dignissim in eu elit.
-	</p>
+	<div class="story">
+		<h3><small>Story</small><br>Hallogallo</h3>
+		<small>July 2013</small>
+		<hr/>
+		<p>
+			Maecenas vitae nibh leo. Vivamus laoreet a purus vulputate ultricies. Suspendisse est sem, congue in leo eget, feugiat tincidunt felis. Maecenas congue fringilla nulla id aliquet. Sed eu erat quis orci blandit auctor ac sed arcu. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec est mauris, consequat sit amet convallis eget, varius vitae quam. Nullam venenatis, risus a dignissim placerat, tortor justo cursus lectus, sed facilisis est massa sed quam. Nam pretium, eros ac laoreet pretium, nisl felis tincidunt ligula, sit amet aliquet erat enim adipiscing dolor. Curabitur a purus nec libero vehicula dignissim in eu elit.
+		</p>
+	</div>
 </div>
 
 <div class="col-md-4">
-	<h3><small>Story</small><br>Sonderangebot</h3>
-	<small>July 2013</small>
-	<hr/>
-	<p>
+	<div class="story">
+		<h3><small>Story</small><br>Sonderangebot</h3>
+		<small>July 2013</small>
+		<hr/>
+		<p>
 		Maecenas vitae nibh leo. Vivamus laoreet a purus vulputate ultricies. Suspendisse est sem, congue in leo eget, feugiat tincidunt felis. Maecenas congue fringilla nulla id aliquet. Sed eu erat quis orci blandit auctor ac sed arcu. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec est mauris, consequat sit amet convallis eget, varius vitae quam. Nullam venenatis, risus a dignissim placerat, tortor justo cursus lectus, sed facilisis est massa sed quam. Nam pretium, eros ac laoreet pretium, nisl felis tincidunt ligula, sit amet aliquet erat enim adipiscing dolor. Curabitur a purus nec libero vehicula dignissim in eu elit.
-	</p>
+		</p>
+	</div>
 </div>
 
 <div class="col-md-4">
-	<h3><small>Story</small><br>Weissensee</h3>
-	<small>July 2013</small>
-	<hr/>
-	<p>
+	<div class="story">
+		<h3><small>Story</small><br>Weissensee</h3>
+		<small>July 2013</small>
+		<hr/>
+		<p>
 		Maecenas vitae nibh leo. Vivamus laoreet a purus vulputate ultricies. Suspendisse est sem, congue in leo eget, feugiat tincidunt felis. Maecenas congue fringilla nulla id aliquet. Sed eu erat quis orci blandit auctor ac sed arcu. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec est mauris, consequat sit amet convallis eget, varius vitae quam. Nullam venenatis, risus a dignissim placerat, tortor justo cursus lectus, sed facilisis est massa sed quam. Nam pretium, eros ac laoreet pretium, nisl felis tincidunt ligula, sit amet aliquet erat enim adipiscing dolor. Curabitur a purus nec libero vehicula dignissim in eu elit.
-	</p>
+		</p>
+	</div>
 </div>
 
 <div class="clear">&nbsp;</div>
