--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -7,6 +7,7 @@
 
 		<%= stylesheet_link_tag "bootstrap.min.css" %>
 		<%= stylesheet_link_tag "master.css" %>
+		<%= stylesheet_link_tag "graph.css" %>
 		<%= javascript_include_tag  "all" %>
 	</head>
 
