--- a/source/privacy.html.erb
+++ b/source/privacy.html.erb
@@ -30,6 +30,34 @@
 		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc massa enim, pharetra a euismod in, aliquam id nisl. Vivamus elementum ullamcorper odio, sed laoreet risus lacinia sit amet. Sed eget pharetra eros. Nunc id luctus odio, et cursus justo. Vestibulum eu imperdiet arcu. Integer semper libero a commodo posuere. Vestibulum ut elit purus. Sed vestibulum arcu risus, ut aliquet justo aliquam eget. Nam eget enim vehicula, lacinia augue in, luctus massa. Maecenas id nunc orci. Proin molestie libero erat, eget consectetur nisi mollis vel. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Fusce pellentesque metus quis pellentesque gravida. Aliquam scelerisque augue sed lacus sodales, in vestibulum tortor dictum. Mauris ut mi orci.
 	</p>
 
+
+	<div class="analytics">
+		<h2>Requests for User Data</h2>
+		<ul class="tabs">
+			<li><a href="#">All</a></li>
+			<li><a href="#">July 2013</a></li>
+			<li><a href="#">January 2014</a></li>
+			<li><a href="#">July 2014</a></li>
+		</ul>
+		<div class="graph">
+			<h3>By Country</h3>
+			<div id="bar_graph_by_country" class="bar_graph_vertical">
+				<div style="height: 100px"></div>
+				<div style="height: 89px"></div>
+				<div style="height: 40px"></div>
+			</div>
+
+			<div class="row">
+				<div class="col-md-3">
+					<h3>Request Type</h3>
+				</div>
+				<div class="col-md-6">
+					<h3>Request Disclosed</h3>
+				</div>
+			</div>
+		</div>
+	</div>
+
 </div>
 
 <div class="col-md-3">
