Add graphs with random data
Change-Id: Idf2a099f085947874d7521134769eb5c170e2d67

--- a/source/privacy.html.erb
+++ b/source/privacy.html.erb
@@ -42,17 +42,15 @@
 		<div class="graph">
 			<h3>By Country</h3>
 			<div id="bar_graph_by_country" class="bar_graph_vertical">
-				<div style="height: 100px"></div>
-				<div style="height: 89px"></div>
-				<div style="height: 40px"></div>
 			</div>
-
 			<div class="row">
-				<div class="col-md-3">
+				<div class="col-md-4">
 					<h3>Request Type</h3>
+					<div id="bar_graph_by_type" class="bar_graph_horizontal"></div>
 				</div>
-				<div class="col-md-6">
+				<div class="col-md-4">
 					<h3>Request Disclosed</h3>
+					<div id="bar_graph_by_disclosed" class="bar_graph_horizontal"></div>
 				</div>
 			</div>
 		</div>
@@ -74,3 +72,4 @@
 
 
 <div class="clear">&nbsp;</div>
+<script src="/javascripts/privacy.js"></script>
