--- a/source/privacy.html.erb
+++ b/source/privacy.html.erb
@@ -56,6 +56,21 @@
 		</div>
 	</div>
 
+	<div class="analytics">
+		<h2>How We Compare to Other Companies</h2>
+		<ul class="tabs">
+			<li><a href="#">All</a></li>
+			<li><a href="#">July 2013</a></li>
+			<li><a href="#">January 2014</a></li>
+			<li><a href="#">July 2014</a></li>
+		</ul>
+		<div id="compare_graph" class="bubble_graph"></div>
+		<span id="complied_requests">
+			<input type="checkbox" id="complied_requests_check">
+			<label for="complied_requests_check">% of requests complied</label>
+		</span><br>
+	</div>
+
 </div>
 
 <div class="col-md-3">
