--- a/source/privacy.html.erb
+++ b/source/privacy.html.erb
@@ -17,6 +17,14 @@
 		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc massa enim, pharetra a euismod in, aliquam id nisl. Vivamus elementum ullamcorper odio, sed laoreet risus lacinia sit amet. Sed eget pharetra eros. Nunc id luctus odio, et cursus justo. Vestibulum eu imperdiet arcu. Integer semper libero a commodo posuere. Vestibulum ut elit purus. Sed vestibulum arcu risus, ut aliquet justo aliquam eget. Nam eget enim vehicula, lacinia augue in, luctus massa. Maecenas id nunc orci. Proin molestie libero erat, eget consectetur nisi mollis vel. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Fusce pellentesque metus quis pellentesque gravida. Aliquam scelerisque augue sed lacus sodales, in vestibulum tortor dictum. Mauris ut mi orci.
 	</p>
 
+	<blockquote>
+		<p>We change people through conversation, not through censorship.</p>
+		<footer>
+			<img src="http://lorempixel.com/100/100/people/">
+			<p>People, Earth</p>
+		</footer>
+	</blockquote>
+
 	<h2>Quisque in accumsan</h2>
 	<p>
 		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc massa enim, pharetra a euismod in, aliquam id nisl. Vivamus elementum ullamcorper odio, sed laoreet risus lacinia sit amet. Sed eget pharetra eros. Nunc id luctus odio, et cursus justo. Vestibulum eu imperdiet arcu. Integer semper libero a commodo posuere. Vestibulum ut elit purus. Sed vestibulum arcu risus, ut aliquet justo aliquam eget. Nam eget enim vehicula, lacinia augue in, luctus massa. Maecenas id nunc orci. Proin molestie libero erat, eget consectetur nisi mollis vel. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Fusce pellentesque metus quis pellentesque gravida. Aliquam scelerisque augue sed lacus sodales, in vestibulum tortor dictum. Mauris ut mi orci.
