Add styles for scorecard
Change-Id: I11349c77761a7dcf0887b487a61a0d77f91bdf5b

--- a/source/privacy.html.erb
+++ b/source/privacy.html.erb
@@ -90,6 +90,14 @@
 			Maecenas vitae nibh leo. Vivamus laoreet a purus vulputate ultricies. Suspendisse est sem, congue in leo eget, feugiat tincidunt felis. Maecenas congue fringilla nulla id aliquet. Sed eu erat quis orci blandit auctor ac sed arcu. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec est mauris, consequat sit amet convallis eget, varius vitae quam. Nullam venenatis, risus a dignissim placerat, tortor justo cursus lectus, sed facilisis est massa sed quam. Nam pretium, eros ac laoreet pretium, nisl felis tincidunt ligula, sit amet aliquet erat enim adipiscing dolor. Curabitur a purus nec libero vehicula dignissim in eu elit.
 		</p>
 	</div>
+
+	<section class="scorecard">
+		<h2>Scorecard</h2>
+		<dl>
+			<dt>Number of compliances</dt>
+			<dd>42</dd>
+		</dl>
+	</section>
 </div>
 
 
