Remove bars for 'Yes & No' keeping them as legends
Change-Id: Ie43faf89439a11590a6728ee5c9d28bf19746c63

--- a/source/privacy.html.erb
+++ b/source/privacy.html.erb
@@ -52,8 +52,11 @@
 				<div class="col-md-4">
 					<h3>Request Type</h3>
 					<div id="bar_graph_by_type" class="bar_graph_horizontal"></div>
-					<h3>Request Disclosed</h3>
-					<div id="bar_graph_by_disclosed" class="bar_graph_horizontal"></div>
+					<h3>Requests Complied?</h3>
+					<div>
+						<p class="legend legend_yes">Yes</p>
+						<p class="legend legend_no">No</p>
+					</div>
 				</div>
 				<div class="col-md-7">
 					<h3>By Country</h3>
