Move the elements around in the grid
Change-Id: I7f55399105e671eace1a9366572899e4be4a8da9

--- a/source/privacy.html.erb
+++ b/source/privacy.html.erb
@@ -8,6 +8,17 @@
 	</h1>
 </div>
 
+<div class="col-md-3">
+	<section class="scorecard">
+		<h2>Scorecard</h2>
+		<dl>
+			<dt>Number of compliances</dt>
+			<dd>42</dd>
+		</dl>
+	</section>
+</div>
+
+
 <div class="col-md-9">
 	<p class="lead">
 		Sed dapibus diam quam. Phasellus lacus metusvenenatis eu ligula volutpat, venenatis faucibus ante.
@@ -29,6 +40,24 @@
 	<p>
 		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc massa enim, pharetra a euismod in, aliquam id nisl. Vivamus elementum ullamcorper odio, sed laoreet risus lacinia sit amet. Sed eget pharetra eros. Nunc id luctus odio, et cursus justo. Vestibulum eu imperdiet arcu. Integer semper libero a commodo posuere. Vestibulum ut elit purus. Sed vestibulum arcu risus, ut aliquet justo aliquam eget. Nam eget enim vehicula, lacinia augue in, luctus massa. Maecenas id nunc orci. Proin molestie libero erat, eget consectetur nisi mollis vel. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Fusce pellentesque metus quis pellentesque gravida. Aliquam scelerisque augue sed lacus sodales, in vestibulum tortor dictum. Mauris ut mi orci.
 	</p>
+</div>
+
+<div class="clear"></div>
+<br><br><br><br><br><br>
+
+
+<div class="col-md-3">
+	<div class="story">
+		<h3><small>Story</small><br>Hallogallo</h3>
+		<small>July 2013</small>
+		<hr/>
+		<p>
+			Maecenas vitae nibh leo. Vivamus laoreet a purus vulputate ultricies. Suspendisse est sem, congue in leo eget, feugiat tincidunt felis. Maecenas congue fringilla nulla id aliquet. Sed eu erat quis orci blandit auctor ac sed arcu. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+		</p>
+	</div>
+</div>
+
+<div class="col-md-9">
 	<h2>Quisque in accumsan</h2>
 	<p>
 		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc massa enim, pharetra a euismod in, aliquam id nisl. Vivamus elementum ullamcorper odio, sed laoreet risus lacinia sit amet. Sed eget pharetra eros. Nunc id luctus odio, et cursus justo. Vestibulum eu imperdiet arcu. Integer semper libero a commodo posuere. Vestibulum ut elit purus. Sed vestibulum arcu risus, ut aliquet justo aliquam eget. Nam eget enim vehicula, lacinia augue in, luctus massa. Maecenas id nunc orci. Proin molestie libero erat, eget consectetur nisi mollis vel. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Fusce pellentesque metus quis pellentesque gravida. Aliquam scelerisque augue sed lacus sodales, in vestibulum tortor dictum. Mauris ut mi orci.
@@ -37,8 +66,12 @@
 	<p>
 		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc massa enim, pharetra a euismod in, aliquam id nisl. Vivamus elementum ullamcorper odio, sed laoreet risus lacinia sit amet. Sed eget pharetra eros. Nunc id luctus odio, et cursus justo. Vestibulum eu imperdiet arcu. Integer semper libero a commodo posuere. Vestibulum ut elit purus. Sed vestibulum arcu risus, ut aliquet justo aliquam eget. Nam eget enim vehicula, lacinia augue in, luctus massa. Maecenas id nunc orci. Proin molestie libero erat, eget consectetur nisi mollis vel. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Fusce pellentesque metus quis pellentesque gravida. Aliquam scelerisque augue sed lacus sodales, in vestibulum tortor dictum. Mauris ut mi orci.
 	</p>
+</div>
 
+<div class="clear"></div>
+<br><br>
 
+<div class="col-md-12">
 	<div class="analytics">
 		<h2>Requests for User Data</h2>
 		<ul class="tabs">
@@ -82,27 +115,6 @@
 	</div>
 
 </div>
-
-<div class="col-md-3">
-	<br><br><br><br><br>
-	<div class="story">
-		<h3><small>Story</small><br>Hallogallo</h3>
-		<small>July 2013</small>
-		<hr/>
-		<p>
-			Maecenas vitae nibh leo. Vivamus laoreet a purus vulputate ultricies. Suspendisse est sem, congue in leo eget, feugiat tincidunt felis. Maecenas congue fringilla nulla id aliquet. Sed eu erat quis orci blandit auctor ac sed arcu. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec est mauris, consequat sit amet convallis eget, varius vitae quam. Nullam venenatis, risus a dignissim placerat, tortor justo cursus lectus, sed facilisis est massa sed quam. Nam pretium, eros ac laoreet pretium, nisl felis tincidunt ligula, sit amet aliquet erat enim adipiscing dolor. Curabitur a purus nec libero vehicula dignissim in eu elit.
-		</p>
-	</div>
-
-	<section class="scorecard">
-		<h2>Scorecard</h2>
-		<dl>
-			<dt>Number of compliances</dt>
-			<dd>42</dd>
-		</dl>
-	</section>
-</div>
-
 
 <div class="clear">&nbsp;</div>
 <script src="/javascripts/privacy.js"></script>
