--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -10,39 +10,37 @@
 
 <div class="col-md-12">
 	<p class="lead">
-		Sed dapibus diam quam. Phasellus lacus metus, venenatis eu ligula volutpat, venenatis faucibus ante. Donec rutrum mauris eu venenatis posuere. Quisque in accumsan velit. Maecenas placerat augue dolor. Nunc dignissim nibh quis adipiscing semper. Cras non sodales neque. Vivamus vitae viverra justo, vel volutpat felis. Duis pulvinar dolor et magna consequat faucibus. Morbi euismod suscipit iaculis. Vivamus pharetra tempus condimentum. Sed non mauris tellus. Integer bibendum augue ut mi scelerisque porta. Suspendisse egestas pulvinar mattis. Fusce adipiscing tristique est. Curabitur pharetra lectus mauris, ac aliquet purus aliquet in
+		<a target="_blank" href="http://wikimediafoundation.org/wiki/Vision">Our mission</a> is to provide access to the sum of all human knowledge. We believe that protecting user privacy and defending against censorship are essential to the success of that mission. Every year, we receive requests from governments, individuals, and organizations to disclose information about our users or to delete or alter content on our projects. Some are legitimate. Some are not.
+	<br /> <br />
+		Through this transparency report, we hope to shed some light on the requests we receive and how we respond to them. We are proud that transparency is one of the core values of the Wikimedia movement.
 	</p>
 </div>
 
 <div class="col-md-4">
 	<div class="story">
-		<h3><small>Story</small><br>Hallogallo</h3>
-		<small>July 2013</small>
+		<h3><small>Section</small><br>Requests for <br />User Data</h3>
 		<hr/>
 		<p>
-			Maecenas vitae nibh leo. Vivamus laoreet a purus vulputate ultricies. Suspendisse est sem, congue in leo eget, feugiat tincidunt felis. Maecenas congue fringilla nulla id aliquet. Sed eu erat quis orci blandit auctor ac sed arcu. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec est mauris, consequat sit amet convallis eget, varius vitae quam. Nullam venenatis, risus a dignissim placerat, tortor justo cursus lectus, sed facilisis est massa sed quam. Nam pretium, eros ac laoreet pretium, nisl felis tincidunt ligula, sit amet aliquet erat enim adipiscing dolor. Curabitur a purus nec libero vehicula dignissim in eu elit.
+
 		</p>
 	</div>
 </div>
 
 <div class="col-md-4">
 	<div class="story">
-		<h3><small>Story</small><br>Sonderangebot</h3>
-		<small>July 2013</small>
+		<h3><small>Section</small><br>Content Alteration &amp; Takedown</h3>
 		<hr/>
 		<p>
-		Maecenas vitae nibh leo. Vivamus laoreet a purus vulputate ultricies. Suspendisse est sem, congue in leo eget, feugiat tincidunt felis. Maecenas congue fringilla nulla id aliquet. Sed eu erat quis orci blandit auctor ac sed arcu. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec est mauris, consequat sit amet convallis eget, varius vitae quam. Nullam venenatis, risus a dignissim placerat, tortor justo cursus lectus, sed facilisis est massa sed quam. Nam pretium, eros ac laoreet pretium, nisl felis tincidunt ligula, sit amet aliquet erat enim adipiscing dolor. Curabitur a purus nec libero vehicula dignissim in eu elit.
+
 		</p>
 	</div>
 </div>
 
 <div class="col-md-4">
 	<div class="story">
-		<h3><small>Story</small><br>Weissensee</h3>
-		<small>July 2013</small>
+		<h3><small>Section</small><br>Frequently Asked Questions</h3>
 		<hr/>
 		<p>
-		Maecenas vitae nibh leo. Vivamus laoreet a purus vulputate ultricies. Suspendisse est sem, congue in leo eget, feugiat tincidunt felis. Maecenas congue fringilla nulla id aliquet. Sed eu erat quis orci blandit auctor ac sed arcu. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec est mauris, consequat sit amet convallis eget, varius vitae quam. Nullam venenatis, risus a dignissim placerat, tortor justo cursus lectus, sed facilisis est massa sed quam. Nam pretium, eros ac laoreet pretium, nisl felis tincidunt ligula, sit amet aliquet erat enim adipiscing dolor. Curabitur a purus nec libero vehicula dignissim in eu elit.
 		</p>
 	</div>
 </div>
