--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -16,7 +16,7 @@
 			<header>
 				<nav class="navbar navbar-default" role="navigation">
 					<div class="navbar-header">
-						<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+						<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
 							<span class="sr-only">Toggle navigation</span>
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
@@ -27,7 +27,7 @@
 							Wikimedia Transparency Report
 						</a>
 					</div>
-					<div class="collapse navbar-collapse">
+					<div id="navbar-collapse" class="collapse navbar-collapse">
 						<ul class="nav navbar-nav navbar-right">
 							<li><a href="/privacy">User Data</a></li>
 							<li><a href="/content">Content</a></li>
