Add data to csv file and fix navigation css
Change-Id: I0d8a73fbe0e9f6e7dff57b88698d6e21e9cc8439

--- a/source/stylesheets/master.css.scss
+++ b/source/stylesheets/master.css.scss
@@ -32,6 +32,8 @@ h2 {
 		border-bottom: 2px solid $blue;
 		margin-left: 10px;
 		font-size: 16px;
+		padding: 16px 0 18px 0;
+		width: 115px;
 	}
 
 	.navbar-brand {
