Make the cards on the homepage clickable
Change-Id: Ib8a6b37dc89fb81a147cdd8b02d518ee26633878

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -17,32 +17,32 @@
 </div>
 
 <div class="col-md-4">
-	<div class="story">
+	<a href="privacy/" class="story">
 		<h3><small>Section</small><br>Requests for <br />User Data</h3>
 		<hr/>
 		<p>
 
 		</p>
-	</div>
+	</a>
 </div>
 
 <div class="col-md-4">
-	<div class="story">
+	<a href="takedown/" class="story">
 		<h3><small>Section</small><br>Content Alteration &amp; Takedown</h3>
 		<hr/>
 		<p>
 
 		</p>
-	</div>
+	</a>
 </div>
 
 <div class="col-md-4">
-	<div class="story">
+	<a href="faq/" class="story">
 		<h3><small>Section</small><br>Frequently Asked Questions</h3>
 		<hr/>
 		<p>
 		</p>
-	</div>
+	</a>
 </div>
 
 <div class="clear">&nbsp;</div>
