Add icons on the homepage
Change-Id: Ie1086151b7331e16964016b6a91ee218303d6916

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -21,7 +21,7 @@
 		<h3><small>Section</small><br>Requests for <br />User Data</h3>
 		<hr/>
 		<p>
-
+			<img class="icon" src="/images/userdata.svg">
 		</p>
 	</a>
 </div>
@@ -31,7 +31,7 @@
 		<h3><small>Section</small><br>Content Alteration &amp; Takedown</h3>
 		<hr/>
 		<p>
-
+			<img class="icon" src="/images/content.svg">
 		</p>
 	</a>
 </div>
@@ -41,6 +41,7 @@
 		<h3><small>Section</small><br>Frequently Asked Questions</h3>
 		<hr/>
 		<p>
+			<img class="icon" src="/images/faq.svg">
 		</p>
 	</a>
 </div>
