Add a blackout class for the lead text
Change-Id: If9e3a078caa34ec943bfd205f6f0b7335fe25d50

--- a/source/privacy.html.erb
+++ b/source/privacy.html.erb
@@ -21,7 +21,7 @@
 
 <div class="col-md-9">
 	<p class="lead">
-		Sed dapibus diam quam. Phasellus lacus metusvenenatis eu ligula volutpat, venenatis faucibus ante.
+		Sed dapibus diam quam. <span class="blackout">Phasellus lacus metusvenenatis eu ligula volutpat, venenatis faucibus ante.</span>
 	</p>
 	<h2>Quisque in accumsan</h2>
 	<p>
