--- a/source/stylesheets/master.css.scss
+++ b/source/stylesheets/master.css.scss
@@ -127,6 +127,15 @@ footer {
 	}
 }
 
+.blackout {
+	color: #000;
+	background: #000;
+
+	&:hover {
+		background: transparent;
+	}
+}
+
 .blue {
 	color: $blue;
 }
