--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -27,7 +27,7 @@
 </div>
 
 <div class="col-md-4">
-	<a href="takedown/" class="story">
+	<a href="content/" class="story">
 		<h3><small>Section</small><br>Content Alteration &amp; Takedown</h3>
 		<hr/>
 		<p>
