Add content to privacy
Change-Id: Ic165a145b3e41747c539d04225e5b442ac676088

--- a/source/privacy.html.erb
+++ b/source/privacy.html.erb
@@ -12,64 +12,84 @@
 	<section class="scorecard">
 		<h2>Scorecard</h2>
 		<dl>
-			<dt>Number of compliances</dt>
-			<dd>42</dd>
+			<dt>Number of Requests Complied</dt>
+			<dd>1</dd>
 		</dl>
 	</section>
+	<br><br>
+	<section class="scorecard">
+		<h2>Scorecard</h2>
+		<dl>
+			<dt>Percentage of User Accounts Actually Affected</dt>
+			<dd>0.002%</dd>
+		</dl>
+	</section>
+
 </div>
 
 
 <div class="col-md-9">
 	<p class="lead">
-		Sed dapibus diam quam. <span class="blackout">Phasellus lacus metusvenenatis eu ligula volutpat, venenatis faucibus ante.</span>
+	Freedom of speech is essential to the Wikimedia movement -- our projects cannot flourish in an ecosystem where individuals cannot speak freely.
 	</p>
-	<h2>Quisque in accumsan</h2>
-	<p>
-		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc massa enim, pharetra a euismod in, aliquam id nisl. Vivamus elementum ullamcorper odio, sed laoreet risus lacinia sit amet. Sed eget pharetra eros. Nunc id luctus odio, et cursus justo. Vestibulum eu imperdiet arcu. Integer semper libero a commodo posuere. Vestibulum ut elit purus. Sed vestibulum arcu risus, ut aliquet justo aliquam eget. Nam eget enim vehicula, lacinia augue in, luctus massa. Maecenas id nunc orci. Proin molestie libero erat, eget consectetur nisi mollis vel. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Fusce pellentesque metus quis pellentesque gravida. Aliquam scelerisque augue sed lacus sodales, in vestibulum tortor dictum. Mauris ut mi orci.
-	</p>
+
+	<p>Our users trust us to protect their identities and we take this responsibility seriously. We collect very little nonpublic information about users and retain that information for a short period of time.</p>
+
+	<p>However, every year, law enforcement officials, government agencies, individuals, and corporations ask us to disclose users’ personal information. Often, we have no nonpublic information to disclose. But when we do, we carefully evaluate every request before considering disclosure. If the requests do not meet our standards -- if they are overly broad, unclear, or irrelevant -- we will push back on behalf of our users. You can also learn more about our efforts to reform US laws that set unclear legal standards about disclosure of user information in our FAQ.</p>
+
+	<p>If we must comply with a legally valid request, we will notify the affected user before we disclose, if we are legally permitted and have the means to do so. In certain cases, we may provide financial assistance to users to fight an invalid request. </p>
+
+	<p>Below, you will find more information about the requests for user data we receive.</p>
 
 	<blockquote>
-		<p>We change people through conversation, not through censorship.</p>
+		<p>Man is least himself when he talks in his own person. Give him a mask, and he will tell you the truth.</p>
 		<footer>
 			<img src="http://lorempixel.com/100/100/people/">
-			<p>People, Earth</p>
+			<p>Oscar Wilde, Writer & Poet (1891)</p>
 		</footer>
 	</blockquote>
-
-	<h2>Quisque in accumsan</h2>
-	<p>
-		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc massa enim, pharetra a euismod in, aliquam id nisl. Vivamus elementum ullamcorper odio, sed laoreet risus lacinia sit amet. Sed eget pharetra eros. Nunc id luctus odio, et cursus justo. Vestibulum eu imperdiet arcu. Integer semper libero a commodo posuere. Vestibulum ut elit purus. Sed vestibulum arcu risus, ut aliquet justo aliquam eget. Nam eget enim vehicula, lacinia augue in, luctus massa. Maecenas id nunc orci. Proin molestie libero erat, eget consectetur nisi mollis vel. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Fusce pellentesque metus quis pellentesque gravida. Aliquam scelerisque augue sed lacus sodales, in vestibulum tortor dictum. Mauris ut mi orci.
-	</p>
 </div>
 
 <div class="clear"></div>
 <br><br><br><br><br><br>
 
-
-<div class="col-md-3">
+<div class="col-md-4">
 	<div class="story">
-		<h3><small>Story</small><br>Hallogallo</h3>
-		<small>July 2013</small>
-		<hr/>
-		<p>
-			Maecenas vitae nibh leo. Vivamus laoreet a purus vulputate ultricies. Suspendisse est sem, congue in leo eget, feugiat tincidunt felis. Maecenas congue fringilla nulla id aliquet. Sed eu erat quis orci blandit auctor ac sed arcu. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-		</p>
+		<h3>
+			<small>Story</small><br>
+			French DCRI Case<br>
+			<small>March 2013</small>
+		</h3>
+		<hr />
+		<p>In March 2013, a french intelligence agency called the DCRI detained a French Wikipedia user and threatened him with severe criminal penalties if he did not use his administrative rights to delete from French Wikipedia information about a military base that the DCRI deemed classified. The supposedly classified information was actually publicly available because the military had provided interviews and a tour of the base to local reporters. We defended the Wikipedia user involved and fought to keep the content up on French Wikipedia. Read more.</p>
 	</div>
 </div>
 
-<div class="col-md-9">
-	<h2>Quisque in accumsan</h2>
-	<p>
-		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc massa enim, pharetra a euismod in, aliquam id nisl. Vivamus elementum ullamcorper odio, sed laoreet risus lacinia sit amet. Sed eget pharetra eros. Nunc id luctus odio, et cursus justo. Vestibulum eu imperdiet arcu. Integer semper libero a commodo posuere. Vestibulum ut elit purus. Sed vestibulum arcu risus, ut aliquet justo aliquam eget. Nam eget enim vehicula, lacinia augue in, luctus massa. Maecenas id nunc orci. Proin molestie libero erat, eget consectetur nisi mollis vel. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Fusce pellentesque metus quis pellentesque gravida. Aliquam scelerisque augue sed lacus sodales, in vestibulum tortor dictum. Mauris ut mi orci.
-	</p>
-	<h2>Quisque in accumsan</h2>
-	<p>
-		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc massa enim, pharetra a euismod in, aliquam id nisl. Vivamus elementum ullamcorper odio, sed laoreet risus lacinia sit amet. Sed eget pharetra eros. Nunc id luctus odio, et cursus justo. Vestibulum eu imperdiet arcu. Integer semper libero a commodo posuere. Vestibulum ut elit purus. Sed vestibulum arcu risus, ut aliquet justo aliquam eget. Nam eget enim vehicula, lacinia augue in, luctus massa. Maecenas id nunc orci. Proin molestie libero erat, eget consectetur nisi mollis vel. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Fusce pellentesque metus quis pellentesque gravida. Aliquam scelerisque augue sed lacus sodales, in vestibulum tortor dictum. Mauris ut mi orci.
-	</p>
+<div class="col-md-4">
+	<div class="story">
+		<h3>
+			<small>Story</small><br>
+			Tasmanian Aboriginal Language Case<br>
+			<small>July 2012</small>
+		</h3>
+		<hr />
+		<p>In July 2012, an aboriginal language center demanded the removal of the English Wikipedia article on "palawa kani", claiming copyright over the entirety of the language. We refused to remove the article because copyright law simply cannot be used to prevent people from using an entire language, nor should it be used to prevent general discussion about the language. Additionally, such a broad claim would have chilled free speech and negatively impacted research, education, and public discourse -- activities that Wikimedia serves to promote.</p>
+	</div>
 </div>
 
-<div class="clear"></div>
-<br><br>
+<div class="col-md-4">
+	<div class="story">
+		<h3>
+			<small>Story</small><br>
+			Monkey Picture<br>
+			<small>January 2014</small>
+		</h3>
+		<hr />
+		<p>In July 2011, an award-winning photographer left his camera unattended in a national park in North Sulawesi, Indonesia. A female crested black macaque monkey got ahold of the camera and took a series of pictures, including some self-portraits. The pictures were featured in an online newspaper article and eventually posted to Commons. We received a takedown request in January 2014 based on the argument that the photographer owned the copyright to the photographs. Believing that the photographs are in the public domain, we denied the request.</p>
+	</div>
+</div>
+
+
 
 <div class="col-md-12">
 	<div class="analytics">
